--- a/styles.css
+++ b/styles.css
@@ -101,3 +101,12 @@ button:hover {
         font-size: 16px;
     }
 }
+/* Styles for banner images */
+.banner-img {
+    max-width: 50%;
+    height: auto;
+    margin-bottom: 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
