--- a/styles.css
+++ b/styles.css
@@ -28,3 +28,9 @@ body {
 .navbar a:hover {
     background-color: #00bfa5;
 }
+.main {
+    margin-left: 250px;
+    padding: 40px;
+    background-color: #fff;
+    min-height: 100vh;
+}
