--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
-body {
-    font-family: 'Orbitron', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-    color: #333;
-}
 .navbar {
     height: 100%;
-    width: 250px;
+    width: 250px; /* Fixed width */
     position: fixed;
     top: 0;
     left: 0;
     background-color: #1f1f1f;
     padding-top: 20px;
+    z-index: 1000; /* Make sure it's always on top */
 }
 
 .navbar a {
@@ -27,10 +20,4 @@ body {
 
 .navbar a:hover {
     background-color: #00bfa5;
-}
-.main {
-    margin-left: 250px;
-    padding: 40px;
-    background-color: #fff;
-    min-height: 100vh;
 }
